--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
   "routes": [
     {
       // Specify which paths will route to a destination using a regex
-      "src": "/api",
+      "src": "/(.*)",
       // Specify the paths' destination
       "dest": "index.js"
     }
